--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,23 @@
+
 .body{
     background: url(http://cdn.playbuzz.com/cdn/d798fdec-49db-4b81-94f2-726c0ec5047f/ff59aadb-8384-4f9c-8718-926c852465a4.gif);
     background-size: cover;
     color: orange;
 }
 .monster-card{
+    display: inline-block;
     font-family: 'Rock Salt', cursive;
     color: orange;
     text-align: center;
+    /*margin: 20px;*/
+    background: transparent;
+    max-width: 350px;
+    min-height: 600px;
 }
+.card{
+}
+.upper-row{
+    border: 10px;
+    margin-bottom: 20px;
+}
+
